[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/Lasers/LaserTiming.gd" type="Script" id=1]
[ext_resource path="res://sprites/Particles/spotlight_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Objects/laser.png" type="Texture" id=3]
[ext_resource path="res://sprites/marks/!!!.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.748428, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.620087, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation = 0.1
hue_variation_random = 0.1

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation = 0.1
hue_variation_random = 0.1

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.00384615, 0.742718, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.1 ), 0.0, -0.101552, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 1.0
tangential_accel = 100.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )
hue_variation = 0.1
hue_variation_random = 0.1

[sub_resource type="Animation" id=13]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.6, 1.7, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="RayCast2D" type="RayCast2D"]
enabled = true
cast_to = Vector2( 320, 0 )
collision_mask = 13
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 32, 0 )
width = 1.0
default_color = Color( 1, 0.282353, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles" type="Particles2D" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.1, 0.1 )
z_index = 1
emitting = false
lifetime = 0.5
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="CollisionParticles" type="Particles2D" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.15, 0.15 )
z_index = 1
emitting = false
lifetime = 0.5
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="BeamParticles" type="Particles2D" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.2, 0.2 )
emitting = false
amount = 18
lifetime = 0.5
local_coords = false
process_material = SubResource( 12 )
texture = ExtResource( 2 )

[node name="TimerLaser" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="TimerRelax" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="RayCastPlayer" type="RayCast2D" parent="."]
z_index = -1
cast_to = Vector2( 320, 0 )
collision_mask = 16

[node name="appear" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="laser" type="Sprite" parent="."]
position = Vector2( 2, 0 )
rotation = 4.71239
texture = ExtResource( 3 )

[node name="!!!" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 12, -0.5 )
rotation = 4.71239
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="!!!"]
autoplay = "!!!"
anims/!!! = SubResource( 13 )

[connection signal="timeout" from="TimerLaser" to="." method="_on_TimerLaser_timeout"]
[connection signal="timeout" from="TimerRelax" to="." method="_on_TimerRelax_timeout"]
[connection signal="timeout" from="appear" to="." method="_on_appear_timeout"]
